...
            card_view:layout_constraintDimensionRatio="1:1"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:shapeAppearanceOverlay="@style/roundedImageView" />

        <TextView
            android:id="@+id/nyt_news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
...
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintHorizontal_chainStyle="spread_inside"
            card_view:layout_constraintStart_toEndOf="@id/nyt_news_guide_line_start"
            card_view:layout_constraintTop_toBottomOf="@id/nyt_news_description" />

        <TextView
            android:id="@+id/nyt_news_timespan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            card_view:layout_constraintBaseline_toBaselineOf="@id/nyt_news_source"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/nyt_news_bookmark"
            card_view:layout_constraintTop_toBottomOf="@id/nyt_news_description"
            tools:text="0 hours ago" />

        <ImageView
            android:id="@+id/nyt_news_bookmark"
            android:layout_width="wrap_content"
...
