<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cnn_news_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cnn_news_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/news_item_image_desc"
            card_view:layout_constraintDimensionRatio="16:9"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/cnn_news_gradient"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            card_view:layout_constraintBottom_toBottomOf="@id/cnn_news_image"
            card_view:layout_constraintEnd_toEndOf="@id/cnn_news_image"
            card_view:layout_constraintStart_toStartOf="@id/cnn_news_image"
            card_view:layout_constraintTop_toTopOf="@id/cnn_news_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cnn_news_guide_line_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cnn_news_guide_line_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/cnn_news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            card_view:layout_constrainedWidth="true"
            card_view:layout_constraintBottom_toTopOf="@id/cnn_news_description"
            card_view:layout_constraintEnd_toStartOf="@id/cnn_news_guide_line_end"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@id/cnn_news_guide_line_start"
            card_view:layout_constraintTop_toBottomOf="@id/cnn_news_image"
            tools:text="Title" />

        <TextView
            android:id="@+id/cnn_news_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            card_view:layout_constrainedWidth="true"
            card_view:layout_constraintBottom_toTopOf="@id/cnn_news_source"
            card_view:layout_constraintEnd_toStartOf="@id/cnn_news_guide_line_end"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@id/cnn_news_guide_line_start"
            card_view:layout_constraintTop_toBottomOf="@id/cnn_news_title"
            tools:text="Description" />

        <TextView
            android:id="@+id/cnn_news_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/source_name_cnn"
            android:textColor="@color/black"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/cnn_news_timespan"
            card_view:layout_constraintHorizontal_chainStyle="spread_inside"
            card_view:layout_constraintStart_toEndOf="@id/cnn_news_guide_line_start"
            card_view:layout_constraintTop_toBottomOf="@id/cnn_news_description" />

        <TextView
            android:id="@+id/cnn_news_timespan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            card_view:layout_constraintBaseline_toBaselineOf="@id/cnn_news_source"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/cnn_news_bookmark"
            card_view:layout_constraintStart_toEndOf="@id/cnn_news_source"
            card_view:layout_constraintTop_toBottomOf="@id/cnn_news_description"
            tools:text="0 hours ago" />

        <ImageView
            android:id="@+id/cnn_news_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/news_item_bookmark_desc"
            android:src="@drawable/ic_bookmark"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/cnn_news_guide_line_end"
            card_view:layout_constraintTop_toBottomOf="@id/cnn_news_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
