...
    <fragment
        android:id="@+id/allFeedsFragment"
        android:name="ua.com.foxminded.newsfeed.ui.articles.news.feeds.AllFeedsFragment"
        android:label="@string/label_all_feeds_fragment">
        <action
            android:id="@+id/action_allFeedsFragment_to_articleFragment"
            app:destination="@id/articleFragment" />
    </fragment>

    <fragment
        android:id="@+id/savedNewsFragment"
        android:name="ua.com.foxminded.newsfeed.ui.articles.saved.SavedNewsFragment"
        android:label="@string/label_saved_news_fragment"
        tools:layout="@layout/fragment_saved_news">
        <action
            android:id="@+id/action_savedNewsFragment_to_articleFragment"
            app:destination="@id/articleFragment" />
...
