<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/allFeedsFragment"
        android:icon="@drawable/ic_news_list_black_24dp"
        android:title="@string/title_news_list" />

    <item
        android:id="@+id/groupsFragment"
        android:icon="@drawable/ic_groups_black_24dp"
        android:title="@string/title_groups" />

    <item
        android:id="@+id/savedNewsFragment"
        android:icon="@drawable/ic_saved_news_black_24dp"
        android:title="@string/title_saved_news" />

</menu>
